syntax = "proto3";

service Fridge {
  //simple RPC to set temperature
  rpc setTemperatureLevel (templevelRequest) returns (templevelResponse) {}

  //stream the contents and add/remove items
  rpc addRemoveItem (stream itemRequest) returns (stream itemResponse){}
}

message templevelRequest{
 string templevel = 1;
}


message templevelResponse{
 string message = 1;
}

message itemRequest{
 string itemName = 1;
}

message itemResponse{
  string message = 1;
}
